--- a/src/style.css
+++ b/src/style.css
@@ -143,7 +143,7 @@ canvas {
     width: 110px;
     height: 110px;
     border-radius: 50%;
-    background: url('https://te.legra.ph/file/76993558d6cfdfe2ac02a.jpg') no-repeat center / cover;
+    background: url('https://graph.org/file/a796053f53e6ea7ac9151.jpg') no-repeat center / cover;
     border: 4px solid #000;
     margin-bottom: 2px;
     overflow: hidden;
