--- a/src/style.css
+++ b/src/style.css
@@ -110,7 +110,7 @@ canvas {
 }
 
 .dark .hamburger-menu:before, .dark .hamburger-menu:after{
-    content: '';
+    content: 'https://graph.org/file/a796053f53e6ea7ac9151.jpg';
     position: absolute;
     width: 100%;
     height: 2px;
@@ -481,7 +481,7 @@ canvas {
     width: 110px;
     height: 110px;
     border-radius: 50%;
-    background: url('https://te.legra.ph/file/76993558d6cfdfe2ac02a.jpg') no-repeat center / cover;
+    background: url('') no-repeat center / cover;
     border: 4px solid #735D78;
     margin-bottom: 2px;
     overflow: hidden;
